# zhongchar

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  manifest.json  package-lock.json  package.json  post_build.sh  service_worker.js  tailwind.config.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  helpers.rs  main.rs
src/components/: mod.rs  radical_table.rs  radical_table_idb_test.rs
src/model/: error.rs  indexed_db_storage.rs  learning_session.rs  mod.rs  radical.rs  radical_form_data.rs  radical_from_csv.rs
src/pages/: home.rs
style/: output.css  tailwind.css
