[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
daggy = "0.8.0"
gloo-timers = "0.3.0"
indexed_db_futures = "0.4.1"
js-sys = "0.3.66"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos-use = { version = "0.8.2", features = ["docs"] }
leptos_meta = { version = "0.5.4", features = ["csr"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
once_cell = "1.19.0"
paste = "1.0.14"
reqwasm = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
thiserror = "1.0.50"

[package.metadata.leptos]
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

[dependencies.web-sys]  
features = [ "Window",  "IdbFactory", "IdbOpenDbRequest", "IdbRequest"]
