[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
console_error_panic_hook = "0.1.7"
csv = "1.3.1"
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
indexed_db_futures = "0.6.0"
js-sys = "0.3.77"
leptos = { version = "0.7.7", features = ["csr", "nightly"] }
leptos-use = "0.15.6"
leptos_meta = "0.7.7"
leptos_router = "0.7.7"
reqwasm = "0.5.0"
serde = "1.0.218"
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.11"


[dependencies.web-sys]
version = "0.3"
features = ["Window", "MediaQueryList", "EventListener", "Storage"]
